displays second column when projects clicked

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p><span class="yellow" id="project-heading">$DICKBUTT</span> <span id="project-readiness" class="green">(complete)</span></p> 
             </header>
             <div class="banner container">
-                <p id="contract">- Contract: <a>000...000</a> <span class="pink">[.]</span></p>
+                <p id="contract">- Contract: </p>
                 <p>- Contract Renounced <span class="pink">[.]</span></p>
                 <p>- Liquidity Burnt <span class="pink">[.]</span></p>
             </div>
