added anchors for contracts and fixes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="divisor second"></div>
         <section class="second">
             <header>
-                <p><span class="yellow" id="project-heading">$DICKBUTT</span> <span id="project-readiness" class="green">(complete)</span></p> 
+                <p><span class="yellow" id="project-heading"></span> <span id="project-readiness" class="green">(complete)</span></p> 
             </header>
             <div class="banner container">
                 <p id="contract">- Contract: </p>
