--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
     <script type="module" src="./script.mjs" defer></script>
+    <link rel="icon" href="./assets/skull-raid.svg" type="image/x-icon">
 </head>
 <body>
     <main>
