--- a/index.html
+++ b/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>raiders</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-    <script type="module" src="./script.mjs" defer></script>
-    <link rel="icon" href="./assets/skull-raid.svg" type="image/x-icon">
-</head>
-<body>
-    <main>
-        <section >
-            <header>
-                <img class="logo" src="/assets/skull-raid.svg" alt="raid3rs logo">
-                <p>Raid3rs</p>
-            </header>
-            <p style="text-decoration: underline;">Projects</p>
-            <ul id="project-container" class="container">
-            </ul>
-            <p style="text-decoration: underline;">Links</p>
-            <div class="container">
-                <p>[Twitter] (<span class="blue">@weareraid3rs</span>)</p>
-                <p>[Telegram] (<span class="blue">@weareraid3rs</span>)</p>
-                <p>[Email] (<span class="blue">yo@raid3rs.org</span>)</p>
-            </div>
-        </section>
-        <div class="divisor second"></div>
-        <section class="second">
-            <header>
-                <p><span class="yellow" id="project-heading"></span> <span id="project-readiness" class="green">(complete)</span></p> 
-            </header>
-            <div class="banner container">
-                <p id="contract">- Contract: </p>
-                <p>- Contract Renounced <span class="pink">[.]</span></p>
-                <p>- Liquidity Burnt <span class="pink">[.]</span></p>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus perspiciatis accusamus, porro velit voluptatum quisquam necessitatibus! Repellendus amet....</p>
-            <p style="text-decoration: underline;">Links</p>
-            <div class="container">
-                <p>[Twitter] (<span class="blue">@weareraid3rs</span>)</p>
-                <p>[Telegram] (<span class="blue">@weareraid3rs</span>)</p>
-                <p>[Email] (<span class="blue">yo@raid3rs.org</span>)</p>
-            </div>
-        </section>
-        <div class="divisor second"></div>
-        <section></section>
-    </main>
-</body>
-<footer>
-    <p>raid3rs © 2024. All Rights Reserved</p>
-</footer>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>raiders</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+        <script type="module" src="./script.mjs" defer></script>
+        <link rel="icon" href="./assets/skull-raid.svg" type="image/x-icon">
+    </head>
+    <body id="body">
+        <main>
+            <section >
+                <header>
+                    <img class="logo" src="/assets/skull-raid.svg" alt="raid3rs logo">
+                    <p>raid3rs</p>
+                </header>
+                <p style="text-decoration: underline;">Projects</p>
+                <ul id="project-container" class="container">
+                </ul>
+                <p style="text-decoration: underline;">Links</p>
+                <div class="container">
+                    <p>[Twitter] (<span class="blue">@weareraid3rs</span>)</p>
+                    <p>[Telegram] (<span class="blue">@weareraid3rs</span>)</p>
+                    <p>[Email] (<span class="blue">yo@raid3rs.org</span>)</p>
+                </div>
+            </section>
+            <div class="divisor second"></div>
+            <section class="second">
+                <header>
+                    <p><span class="yellow" id="project-heading"></span> <span id="project-readiness" class="green">(complete)</span></p> 
+                </header>
+                <div class="banner container">
+                    <p id="contract">- Contract: </p>
+                    <p>- Contract Renounced <span class="pink">[.]</span></p>
+                    <p>- Liquidity Burnt <span class="pink">[.]</span></p>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus perspiciatis accusamus, porro velit voluptatum quisquam necessitatibus! Repellendus amet....</p>
+                <p style="text-decoration: underline;">Links</p>
+                <div class="container">
+                    <p>[Twitter] (<span class="blue">@weareraid3rs</span>)</p>
+                    <p>[Telegram] (<span class="blue">@weareraid3rs</span>)</p>
+                    <p>[Email] (<span class="blue">yo@raid3rs.org</span>)</p>
+                </div>
+            </section>
+            <div class="divisor second"></div>
+            <section></section>
+        </main>
+        <footer>
+            <p>raid3rs © 2024. All Rights Reserved</p>
+        </footer>
+    </body>
 </html>
