fixed height and socials

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                 </ul>
                 <p style="text-decoration: underline;">Links</p>
                 <div class="container">
-                    <p>[Twitter] (<span class="blue">@weareraid3rs</span>)</p>
-                    <p>[Telegram] (<span class="blue">@weareraid3rs</span>)</p>
-                    <p>[Email] (<span class="blue">yo@raid3rs.org</span>)</p>
+                    <p>[Twitter] (<a class="blue" href="https://twitter.com/weareraid3rs
+                        " target="_blank">@weareraid3rs</a>)</p>
+                    <p>[Telegram] (<span class="blue">XXXX</span>)</p>
+                    <p>[Email] (<a class="blue" href="mailto:yo@raid3rs.org" target="_blank">yo@raid3rs.xyz</a>)</p>
                 </div>
             </section>
             <div class="divisor second"></div>
